--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -34,6 +34,13 @@
       <version>3.1.0</version>
     </dependency>
 
+    <!--druid连接池-->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.1.19</version>
+    </dependency>
+
 
     <!--log4j 还需搭配properties文件-->
     <dependency>
